trunk/Archive2/ec/0dd30ada4404d5/output
main.cpp: In function ‘void print_all(const Ts& ...)’:
main.cpp:6:35: error: ‘x’ was not declared in this scope
     auto swallow = {(std::cout << x << " ")...};
                                   ^
main.cpp: In instantiation of ‘void print_all(const Ts& ...) [with Ts = {int, double, char, char [6]}]’:
main.cpp:11:36:   required from here
main.cpp:6:47: error: ‘std::initializer_list<auto> swallow’ has incomplete type
     auto swallow = {(std::cout << x << " ")...};
                                               ^
main.cpp: In instantiation of ‘void print_all(const Ts& ...) [with Ts = {int, char}]’:
main.cpp:15:21:   required from here
main.cpp:6:47: error: ‘std::initializer_list<auto> swallow’ has incomplete type
